<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator_digit_seven">7</string>
    <string name="calculator_digit_eight">8</string>
    <string name="calculator_digit_nine">9</string>
    <string name="calculator_substraction">-</string>
    <string name="calculator_digit_four">4</string>
    <string name="calculator_digit_five">5</string>
    <string name="calculator_digit_six">6</string>
    <string name="calculator_operator_addition">+</string>
    <string name="calculator_digit_one">1</string>
    <string name="calculator_digit_two">2</string>
    <string name="calculator_digit_3">3</string>
    <string name="calculator_operator_multiplication">*</string>
    <string name="calculator_digit_zero">0</string>
    <string name="calculator_clear">C</string>
    <string name="calculator_equal">=</string>
    <string name="calculator_operator_division">/</string>
    <string name="error_invalid_operation">Invalid Operation</string>
</resources>
